[scss] Fix padding and letter spacing

--- a/app/assets/stylesheets/redesign/pages/_gratitude-page.scss
+++ b/app/assets/stylesheets/redesign/pages/_gratitude-page.scss
@@ -24,6 +24,7 @@
   .title-highlight {
     font-family: $font-family-secondary;
     font-weight: bold;
+    letter-spacing: 2px;
   }
 
   .mobile-safe-padding {
@@ -65,7 +66,7 @@
 
     .intro-wrapper .gratitudePage__copy {
       padding-left: 55px;
-      padding-right: 50px;
+      padding-right: 55px;
     }
 
     .social-content-left {
